bad/bin_op_or_bool_void.example_compiler_output
ERROR
[1mbad/bin_op_or_bool_void.lat:4:7: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `boolean` and `void`[m
	true || foo();
	     [1;32m^[m
